k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-seal-online 
  labels:
    app: rust-seal-online
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: rust-seal-online
